--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,124 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  background-color: #23252c;
+}
+
+.app {
+  max-width: 317px;
+  margin: 0 auto;
+}
+
+main {
+  background-color: #1a1b21;
+}
+/* Info */
+.info {
+  text-align: center;
+}
+
+.info h2 {
+  color: #ffffff;
+  font-size: 1.5625rem;
+  margin: 0.8em 0 0 0;
+}
+
+.info h3 {
+  color: #f3bf99;
+  font-size: 0.8rem;
+  margin: 0.5em 0 0 0;
+  font-weight: 400;
+}
+
+.info p {
+  color: #f5f5f5;
+  font-size: 0.64rem;
+  line-height: 1.5;
+  margin: 0.88em 0 1.46em 0;
+}
+
+.contact-btn {
+  display: flex;
+  justify-content: center;
+  gap: 17px;
+}
+
+.btn {
+  width: 130px;
+  font-family: "Inter", sans-serif;
+  font-size: 0.875rem;
+  padding: 0.714em 1.8em;
+  border-radius: 6px;
+}
+
+.email-btn {
+  background-color: white;
+  border: 1px solid #d1d5db;
+}
+
+.linkedin-btn {
+  background-color: #5093e2;
+  color: white;
+  border: none;
+}
+
+.icon {
+  margin-right: 0.5em;
+}
+
+.email-icon {
+  color: #1e1f26;
+}
+
+/* About */
+
+.about,
+.interests {
+  display: flex;
+  flex-direction: column;
+  max-width: 250px;
+  margin: 2em auto 0 auto;
+}
+
+.interests {
+  padding-bottom: 3.125em;
+}
+
+.about h2,
+.interests h2 {
+  color: #f5f5f5;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.about-desc,
+.interests-desc {
+  color: #dcdcdc;
+  font-size: 0.64rem;
+  line-height: 1.5;
+  margin: 0.3125em 0 0 0;
+}
+
+/* Footer */
+.footer {
+  background-color: #161619;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  padding: 1.25em 0;
+  gap: 20px;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.footer-icon {
+  width: 25px;
+  height: 25px;
+  color: #918e9b;
 }
